--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,6 @@
         "twig/twig": "^3.0",
         "phpmailer/phpmailer": "^6.4",
         "squizlabs/php_codesniffer": "*",
-        "ext-pdo": "*",
-        "ext-json": "*",
 		"tuupola/slim-basic-auth": "^3.3",
 		"tuupola/slim-jwt-auth": "^3.5",
 		"slim/twig-view": "^2.5",
@@ -19,7 +17,10 @@
 		"symfony/twig-bundle": "^5.2",
 		"twig/intl-extra": "^3.3",
 		"monolog/monolog": "^2.2",
-		"flyingluscas/correios-php": "^2.4"
+		"flyingluscas/correios-php": "^2.4",
+        "ext-json": "*",
+        "ext-openssl": "*"
+        "ext-pdo": "*",
     },
     "autoload": {
         "psr-4": {
